# automl-model-training

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.marp.html  README.marp.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: lint.yml  test.yml  typecheck.yml
docs/: error-handling.md  training-options.md  usage-guide.md
samples/: README.md  flower_species.csv  fraud_detection.csv  house_prices.csv  monthly_sales.csv
src/automl_model_training/: __init__.py  agent.py  backtest.py  compare.py  config.py  data.py  drift.py  experiment.py  feature_engineering.py  ollama_agent.py  predict.py  profile.py  tools.py  train.py
src/automl_model_training/evaluate/: __init__.py  analyze.py  classification.py  explain.py  predict_classification.py  predict_regression.py  prune.py  regression.py
src/automl_model_training/tools/: __init__.py  analysis.py  calibration.py  explainability.py  feature_engineering.py  model_eval.py  profile.py  train_predict.py
tests/: conftest.py  test_agent.py  test_agent_run.py  test_analyze.py  test_backtest.py  test_calibration_curve.py  test_compare.py  test_compare_importance.py  test_config.py  test_config_logging.py  test_core_tools.py  test_cross_validate.py  test_data.py  test_data_artifacts.py  test_deep_profile.py  test_detect_leakage.py  test_drift.py  test_edge_cases.py  test_evaluate_classification.py  test_evaluate_regression.py  test_experiment.py  test_explain.py  test_explain_compute.py  test_feature_engineering.py  test_inspect_errors.py  test_model_subset_evaluate.py  test_new_features.py  test_new_tier3_tools.py  test_ollama_agent.py  test_optuna_tune.py  test_partial_dependence.py  test_partial_dependence_2way.py  test_predict.py  test_predict_classification.py  test_predict_confidence.py  test_predict_regression.py  test_profile.py  test_prune.py  test_shap_interactions.py  test_threshold_sweep.py  (+5 more)
