[project]
name = "automl-model-training"
version = "0.1.0"
description = "AutoML training and prediction pipeline built on AutoGluon — train, evaluate, explain, and predict from a single CLI"
readme = "README.md"
authors = [
    { name = "Aniket Braganza", email = "aabragan@amazon.com" }
]
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "autogluon>=1.5.0",
    "shap>=0.45.0",
]

[project.scripts]
train = "automl_model_training.train:main"
train-binary = "automl_model_training.train:train_binary"
train-regression = "automl_model_training.train:train_regression"
predict = "automl_model_training.predict:main"
predict-binary = "automl_model_training.predict:predict_binary"
predict-regression = "automl_model_training.predict:predict_regression"
backtest = "automl_model_training.backtest:main"
profile = "automl_model_training.profile:main"
experiments = "automl_model_training.experiment:main"
agent-binary = "automl_model_training.agent:agent_binary"
agent-regression = "automl_model_training.agent:agent_regression"

[project.optional-dependencies]
extreme = [
    "autogluon.tabular[tabarena]>=1.5.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
# Prevent __pycache__ generation when running via `uv run`
env = { PYTHONDONTWRITEBYTECODE = "1" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pandas-stubs>=2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
